# MAGS-Resume

./: .gitignore  Dockerfile  README.md  config.template.yaml  container.def  environment.yml  pyproject.toml  requirements.txt
mags_resume/: cli.py  graph.py  state.py  ui.py
mags_resume/agents/: reviewer.py  writer.py
mags_resume/prompts/: master_resume_instructions.md  reviewer_human.md  reviewer_system.md  writer_initial_human.md  writer_initial_system.md  writer_revise_human.md  writer_revise_system.md
mags_resume/utils/: config_parser.py  db.py  doc_ops.py  logger.py  prompt_loader.py
